--- a/python/Operator/operation.kv
+++ b/python/Operator/operation.kv
@@ -6,7 +6,7 @@
     orientation: 'vertical'
     canvas.before:
         Color:
-            rgba: (1,1,1, 1)
+            rgba: (.2,.2,.2, 1)
         Rectangle:
             size:self.size 
             pos:self.pos
@@ -17,7 +17,7 @@
         height: 40
         canvas.before:
             Color:
-                rgba: (.45,.06,.45, 1)
+                rgba: (.1,.1,.1, 1)
             Rectangle:
                 size:self.size 
                 pos:self.pos
@@ -32,7 +32,8 @@
 
     BoxLayout:
         id: current
-        size_hint_y: 50
+        size_hint_y: None
+        height: 50
         canvas.before:
             Color:
                 rgba: (1,1,1, 1)
@@ -43,14 +44,77 @@
             id: cur_patient
             text: 'Current Patient: '
             background_normal: ''
-            background_color: (.32,.06,.32, 1)
+            background_color:(.15,.15,.15, 1)
+            size_hint_x: .4
         Button:
             id: cur_condition
             text: 'Default Condition'
             background_normal: ''
-            background_color: (.4,.06,.4, 1)
+            background_color: (.15,.15,.15, 1)
         Button:
             id: cur_reset
             text: 'RESET'
             background_normal: ''
-            background_color: (.65,.06,.65, 1)
+            background_color: (.15,.15,.15, 1)
+            size_hint_x: .2
+    BoxLayout:
+        BoxLayout:
+            id: patient_details
+            orientation: "vertical"
+            size_hint_x: .8
+
+            BoxLayout:
+                id: patient_labels
+                size_hint_y: None
+                height: 40
+                canvas.before:
+                    Color: 
+                        rgba: (.15,.15,.15, 1)
+                    Rectangle:
+                        size: self.size
+                        pos:self.pos
+                FlatButton:
+                    text: 'Check in date'
+                    size_hint_x: .1
+                FlatButton:
+                    text: 'Patient ID'
+                    size_hint_x: .2
+                FlatButton:
+                    text: 'Room number'
+                    size_hint_x: .1
+                FlatButton:
+                    text: 'EMG #'
+                    size_hint_x: .2
+                FlatButton:
+                    text: 'Primary nurse'
+                    size_hint_x: .2
+                FlatButton:
+                    text: 'Primary Doctor'
+                    size_hint_x: .2
+
+            BoxLayout:
+                id: patient_inputs
+                size_hint_y: None
+                height: 30
+                TextInput:
+                    id: Check_inp
+                    size_hint_x: .1
+                TextInput:
+                    id: PID_inp
+                    size_hint_x: .2
+                TextInput:
+                    id: RN_inp
+                    size_hint_x: .1
+                TextInput:
+                    id: EMG_inp
+                    size_hint_x: .2
+                TextInput:
+                    id: PN_inp
+                    size_hint_x: .2
+                TextInput:
+                    id: PD_inp
+                    size_hint_x: .2
+        BoxLayout:
+            id: preview
+            orientation: 'vertical'
+            size_hint_x: .2
