--- a/python/admin/admin.kv
+++ b/python/admin/admin.kv
@@ -66,18 +66,24 @@
                 state: 'down'
                 background_color: (.15, .15, .15,1)
                 background_normal: ''
+                group: 'adminNavs'
+                on_state: root.change_screen(self)
             ToggleButton:
                 id: patient_toggle
                 text: 'Manage Patients'
                 size_hint_y: .1
                 background_color: (.15, .15, .15,1)
                 background_normal: ''
+                group: 'adminNavs'
+                on_state: root.change_screen(self)
             ToggleButton:
                 id: analysis_toggle
                 text: 'Patient Analysis'
                 size_hint_y: .1
                 background_color: (.15, .15, .15,1)
                 background_normal: ''
+                group: 'adminNavs'
+                on_state: root.change_screen(self)
             Label:
                 id: sp
                 text: ''
@@ -86,3 +92,14 @@
             id: content
             size_hint_x: .8
             padding: (20,10)
+            ScreenManager:
+                id: scrnMngr
+                Screen:
+                    id: scrnContent
+                    name: 'scrnContent'
+                Screen:
+                    id: scrnPatientContent
+                    name: 'scrnPatientContent'
+                Screen:
+                    id: scrnAnalysisContent
+                    name: 'scrnAnalysisContent'
