--- a/python/admin/admin.kv
+++ b/python/admin/admin.kv
@@ -119,6 +119,7 @@
                             Button:
                                 id: crudUpdate
                                 text: 'Update User'
+                                on_release: root.update_user_fields()
                             Button:
                                 id: crudRemove
                                 text: 'Remove User'
