--- a/python/admin/admin.kv
+++ b/python/admin/admin.kv
@@ -123,6 +123,7 @@
                             Button:
                                 id: crudRemove
                                 text: 'Remove User'
+                                on_release: root.remove_user_fields()
                 Screen:
                     id: scrnPatientContent
                     name: 'scrnPatientContent'
